objects/nSBA__Real_Estate_Owned__c.object
<CustomObject>
    <description>Used in SBA UI for Form 413</description>
    <fields>
        <fullName>nSBA__Contact_Name__c</fullName>
        <description>Name of associated contact</description>
        <inlineHelpText>Name of associated contact</inlineHelpText>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Real Estates Owned</relationshipLabel>
        <relationshipName>Real_Estates_Owned</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>nSBA__Mortgage_Amount_Of_Payment_Per_Month_Yr__c</fullName>
        <description>Amount of Payment per Month/Year</description>
        <inlineHelpText>Amount of Payment per Month/Year</inlineHelpText>
        <label>Mortgage Amount Of Payment Per Month Yr</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Mortgage_Balance__c</fullName>
        <description>Mortgage Balance</description>
        <inlineHelpText>Mortgage Balance</inlineHelpText>
        <label>Mortgage Balance</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Mortgage_Holder_Account_Number__c</fullName>
        <description>Mortgage Account Number</description>
        <inlineHelpText>Mortgage Account Number</inlineHelpText>
        <label>Mortgage Holder Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Mortgage_Holder_City__c</fullName>
        <description>The city name for the mortgage holder</description>
        <inlineHelpText>The city name for the mortgage holder</inlineHelpText>
        <label>Mortgage Holder City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Mortgage_Holder_Name__c</fullName>
        <description>Name of Mortgage Holder</description>
        <inlineHelpText>Name of Mortgage Holder</inlineHelpText>
        <label>Mortgage Holder Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Mortgage_Holder_State__c</fullName>
        <description>State code for the mortgage holder</description>
        <inlineHelpText>State code for the mortgage holder</inlineHelpText>
        <label>Mortgage Holder State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nSBA__Mortgage_Holder_Street__c</fullName>
        <description>The street name for the mortgage holder</description>
        <inlineHelpText>The street name for the mortgage holder</inlineHelpText>
        <label>Mortgage Holder Street</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Mortgage_Holder_Zipcode__c</fullName>
        <description>The 5 digit zipcode for the mortgage holder</description>
        <inlineHelpText>The 5 digit zipcode for the mortgage holder</inlineHelpText>
        <label>Mortgage Holder Zipcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Mortgage_Status__c</fullName>
        <description>Status of mortgage</description>
        <inlineHelpText>Status of mortgage</inlineHelpText>
        <label>Mortgage Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>In Foreclosure</fullName>
                </value>
                <value>
                    <fullName>Paid in full</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nSBA__Real_Estate_City__c</fullName>
        <description>The city name for the real estate</description>
        <inlineHelpText>The city name for the real estate</inlineHelpText>
        <label>Real Estate City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Real_Estate_Date_of_Purchase__c</fullName>
        <description>Date purchased</description>
        <inlineHelpText>Date purchased</inlineHelpText>
        <label>Real Estate Date of Purchase</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nSBA__Real_Estate_Original_Cost__c</fullName>
        <description>Original Cost</description>
        <inlineHelpText>Original Cost</inlineHelpText>
        <label>Real Estate Original Cost</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Real_Estate_Present_Market_Value__c</fullName>
        <description>Present Market Value</description>
        <inlineHelpText>Present Market Value</inlineHelpText>
        <label>Real Estate Present Market Value</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Real_Estate_State_Code__c</fullName>
        <description>The state code for the real estate</description>
        <inlineHelpText>The state code for the real estate</inlineHelpText>
        <label>Real Estate State Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nSBA__Real_Estate_Street__c</fullName>
        <description>The Street Name for the Real Estate</description>
        <inlineHelpText>The Street Name for the Real Estate</inlineHelpText>
        <label>Real Estate Street</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Real_Estate_Type__c</fullName>
        <description>Type of Real Estate (e.g. Type of Real Estate (e.g. Primary Residence, Other Residence, Rental Property, Land, etc.)</description>
        <inlineHelpText>Type of Real Estate (e.g. Type of Real Estate (e.g. Primary Residence, Other Residence, Rental Property, Land, etc.)
)</inlineHelpText>
        <label>Real Estate Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary Residence</fullName>
                </value>
                <value>
                    <fullName>Other Residence</fullName>
                </value>
                <value>
                    <fullName>Rental Property</fullName>
                </value>
                <value>
                    <fullName>Land</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nSBA__Real_Estate_Zipcode__c</fullName>
        <description>The 5 digit zipcode for the real estate</description>
        <inlineHelpText>The 5 digit zipcode for the real estate</inlineHelpText>
        <label>Real Estate Zipcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Status_Of_Mortgage__c</fullName>
        <description>--DEPRECATED-- Status of Mortgage</description>
        <label>-D Status Of Mortgage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>In Foreclosure</fullName>
                </value>
                <value>
                    <fullName>Paid in Full</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Real Estate Owned</label>
    <nameField>
        <label>Real Estate Owned Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Real Estates Owned</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>